--- a/.gitignore
+++ b/.gitignore
@@ -1224,3 +1224,5 @@ node_modules/yallist/LICENSE
 node_modules/yallist/package.json
 node_modules/yallist/README.md
 node_modules/yallist/yallist.js
+intro_to_assessment_slides.pdf
+CSC2052 2023-24 TradetheCart.pdf
