--- a/.gitignore
+++ b/.gitignore
@@ -1226,3 +1226,42 @@ node_modules/yallist/README.md
 node_modules/yallist/yallist.js
 intro_to_assessment_slides.pdf
 CSC2052 2023-24 TradetheCart.pdf
+node_modules/express-session/HISTORY.md
+node_modules/express-session/index.js
+node_modules/express-session/LICENSE
+node_modules/express-session/node_modules/cookie/HISTORY.md
+node_modules/express-session/node_modules/cookie/index.js
+node_modules/express-session/node_modules/cookie/LICENSE
+node_modules/express-session/node_modules/cookie/package.json
+node_modules/express-session/node_modules/cookie/README.md
+node_modules/express-session/package.json
+node_modules/express-session/README.md
+node_modules/express-session/session/cookie.js
+node_modules/express-session/session/memory.js
+node_modules/express-session/session/session.js
+node_modules/express-session/session/store.js
+node_modules/on-headers/HISTORY.md
+node_modules/on-headers/index.js
+node_modules/on-headers/LICENSE
+node_modules/on-headers/package.json
+node_modules/on-headers/README.md
+node_modules/random-bytes/HISTORY.md
+node_modules/random-bytes/index.js
+node_modules/random-bytes/LICENSE
+node_modules/random-bytes/package.json
+node_modules/random-bytes/README.md
+node_modules/uid-safe/HISTORY.md
+node_modules/uid-safe/index.js
+node_modules/uid-safe/LICENSE
+node_modules/uid-safe/package.json
+node_modules/uid-safe/README.md
+package-lock.json
+package.json
+node_modules/cookie-parser/HISTORY.md
+node_modules/cookie-parser/index.js
+node_modules/cookie-parser/LICENSE
+node_modules/cookie-parser/node_modules/cookie/HISTORY.md
+node_modules/cookie-parser/node_modules/cookie/index.js
+node_modules/cookie-parser/node_modules/cookie/LICENSE
+node_modules/cookie-parser/node_modules/cookie/README.md
+node_modules/cookie-parser/README.md
