--- a/.gitignore
+++ b/.gitignore
@@ -1265,3 +1265,4 @@ node_modules/cookie-parser/node_modules/cookie/index.js
 node_modules/cookie-parser/node_modules/cookie/LICENSE
 node_modules/cookie-parser/node_modules/cookie/README.md
 node_modules/cookie-parser/README.md
+week11a_slides.pdf
