--- a/.gitignore
+++ b/.gitignore
@@ -1266,3 +1266,4 @@ node_modules/cookie-parser/node_modules/cookie/LICENSE
 node_modules/cookie-parser/node_modules/cookie/README.md
 node_modules/cookie-parser/README.md
 week11a_slides.pdf
+public/CSS Files.txt
