Ability to remove card

--- a/.gitignore
+++ b/.gitignore
@@ -1267,3 +1267,5 @@ node_modules/cookie-parser/node_modules/cookie/README.md
 node_modules/cookie-parser/README.md
 week11a_slides.pdf
 public/CSS Files.txt
+Report.docx
+~$Report.docx
